--- a/index.html
+++ b/index.html
@@ -28,37 +28,136 @@
     <div id="content-wrapper">
       <div class="inner clearfix">
         <section id="main-content">
-          <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+          <h1>
+<a name="karmainfinity" class="anchor" href="#karmainfinity"><span class="octicon octicon-link"></span></a>KarmaInfinity</h1>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<h3>
+<a name="what-is-karmainfinity" class="anchor" href="#what-is-karmainfinity"><span class="octicon octicon-link"></span></a>What is KarmaInfinity?</h3>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
+<p>KarmaInfinity is reddit upvote bot. It uses a single proxy per account to mimic reality for each user.
+<img src="http://i.imgur.com/3ynCcIB.png" alt="Current GUI"></p>
+
+<h3>
+<a name="what-can-it-do" class="anchor" href="#what-can-it-do"><span class="octicon octicon-link"></span></a>What can it do?</h3>
+
+<p>KarmaInfinity can login with a user, retrieve submissions of /u/ and /r/ pages, vote on submissions, and even cycle through a list of proxied accounts doing each of these actions.</p>
+
+<h3>
+<a name="whats-next" class="anchor" href="#whats-next"><span class="octicon octicon-link"></span></a>What's next?</h3>
+
+<p>Current I would like to focus attention on creating a stable bot with single user upvoting, multiple user upvoting, and automatic account creation. All of these features will need to be implemented with realistic interaction as well as randomizing so that the accounts remain unbanned. </p>
+
+<h2>
+<a name="how-to-contribute" class="anchor" href="#how-to-contribute"><span class="octicon octicon-link"></span></a>How to contribute?</h2>
+
+<p>To contribute please fork the repo and make all alterations on that fork. After your feature is ready to be merged into the main code, send a pull request! I will check over it and accept it if it works as wanted.</p>
+
+<h4>
+<a name="all-code-must-be-commented-and-well-written" class="anchor" href="#all-code-must-be-commented-and-well-written"><span class="octicon octicon-link"></span></a><em>All code must be commented and well written</em>
+</h4>
+
+<p>Be sure to make the bot realistic and randomized!
+<em>Send in a pull request and I'll be happy to merge!</em></p>
+
+<h3>
+<a name="dependencies" class="anchor" href="#dependencies"><span class="octicon octicon-link"></span></a>Dependencies</h3>
+
+<p><a href="https://github.com/karan/jReddit">jReddit</a></p>
+
+<p><a href="http://code.google.com/p/json-simple/">JSON-simple</a></p>
+
+<h3>
+<a name="examples-of-using-the-api---more-examples" class="anchor" href="#examples-of-using-the-api---more-examples"><span class="octicon octicon-link"></span></a>Examples of using the API - <a href="https://github.com/karan/jReddit/blob/master/implemented_methods.md">More examples</a>
+</h3>
+
+<p>I have implemented some of my own methods which can be found in Submission.java and Submissions.java
+Upvote every submission on the frontpage of a subreddit</p>
+
+<pre><code>import im.goel.jreddit.submissions.Submission;
+import im.goel.jreddit.submissions.Submissions;
+import im.goel.jreddit.user.User;
+
+public final class Test {
+    public static void main(String[] args) throws Exception {
+        User user = new User("username", "password");
+        user.connect();
+
+        for (Submission submission : Submissions.getSubmissions("programming",
+                Submissions.HOT, Submissions.FRONTPAGE, user)) {
+            submission.upVote();
+        }
+    }
+}
 </code></pre>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>Submit a link and self post</p>
 
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<pre><code>import im.goel.jreddit.user.User;
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+public final class Test {
+    public static void main(String[] args) throws Exception {
+        User user = new User("username", "password");
+        user.connect();
 
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
+        user.submitLink(
+                "Oracle V Google judge is a programmer!",
+                "http://www.i-programmer.info/news/193-android/4224-oracle-v-google-judge-is-a-programmer.html",
+                "programming");
+        user.submitSelfPost("What's the difference between a duck?",
+                "One of its legs are both the same!", "funny");
+    }
+}
+</code></pre>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>List all submissions made by user called USERNAME_OF_OTHER_USER</p>
 
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<pre><code>import im.goel.jreddit.submissions.Submission;
+import im.goel.jreddit.user.User;
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+/**
+ * @author Benjamin Jakobus
+ */
+public final class Test {
+    public static void main(String[] args) throws Exception {
+        User user = new User("username", "password");
+            user.connect();
 
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+            List&lt;Submission&gt; submissions = User.submissions("USERNAME_OF_OTHER_USER");
+            // To list hidden submissions, user User.hidden("...");
 
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+        for (Submission s : submissions) {
+            // Print info here
+        }
+    }
+}
+</code></pre>
+
+<p>Send a message to another user</p>
+
+<pre><code>import im.goel.jreddit.message.Messages;
+import im.goel.jreddit.user.User;
+
+
+public class ComposeTest {
+
+    /**
+     * @author Karan Goel
+     */
+    public static void main(String[] args) {
+        User user = null;
+        username_of_recipient = "other_user";
+        try {
+            user = new User("username", "password"); // Add your username and password
+            user.connect();
+        } catch (Exception exception) {
+            exception.printStackTrace();
+        }
+
+        new Messages().compose(user, username_of_recipient, "this is the title", "the message", "", "");
+    }
+
+}
+</code></pre>
         </section>
 
         <aside id="sidebar">
